[package]
name = "tt"
version = "0.1.0"
edition = "2021"
authors = ["Guangde Wang <g2wang@gmail.com>"]
description = "a timezone conversion util"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
regex = "1.7.1"
clap = { version = "4.1.8", features = ["derive"] }
dirs = "5.0.1"
