[package]
name = "tt"
version = "0.1.0"
edition = "2021"
authors = ["Guangde Wang <g2wang@gmail.com>"]
description = "a timezone conversion util"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
regex = "1.10.4"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
